--- a/font-awesome/package.json
+++ b/font-awesome/package.json
@@ -1,56 +1,28 @@
 {
-  "_args": [
-    [
-      {
-        "name": "font-awesome",
-        "raw": "font-awesome@^4.6.3",
-        "rawSpec": "^4.6.3",
-        "scope": null,
-        "spec": ">=4.6.3 <5.0.0",
-        "type": "range"
-      },
-      "/Users/paulaustin/repos/teakblocks"
-    ]
+  "name": "font-awesome",
+  "description": "The iconic font and CSS framework",
+  "version": "4.7.0",
+  "style": "css/font-awesome.css",
+  "keywords": [
+    "font",
+    "awesome",
+    "fontawesome",
+    "icon",
+    "font",
+    "bootstrap"
   ],
-  "_from": "font-awesome@>=4.6.3 <5.0.0",
-  "_id": "font-awesome@4.7.0",
-  "_inCache": true,
-  "_installable": true,
-  "_location": "/font-awesome",
-  "_nodeVersion": "5.5.0",
-  "_npmOperationalInternal": {
-    "host": "packages-18-east.internal.npmjs.com",
-    "tmp": "tmp/font-awesome-4.7.0.tgz_1477344817307_0.6990068354643881"
-  },
-  "_npmUser": {
-    "email": "julian@goodafternoon.co",
-    "name": "juliankrispel"
-  },
-  "_npmVersion": "3.3.12",
-  "_phantomChildren": {},
-  "_requested": {
-    "name": "font-awesome",
-    "raw": "font-awesome@^4.6.3",
-    "rawSpec": "^4.6.3",
-    "scope": null,
-    "spec": ">=4.6.3 <5.0.0",
-    "type": "range"
-  },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "https://registry.npmjs.org/font-awesome/-/font-awesome-4.7.0.tgz",
-  "_shasum": "8fa8cf0411a1a31afd07b06d2902bb9fc815a133",
-  "_shrinkwrap": null,
-  "_spec": "font-awesome@^4.6.3",
-  "_where": "/Users/paulaustin/repos/teakblocks",
-  "author": {
-    "email": "dave@fontawesome.io",
-    "name": "Dave Gandy",
-    "url": "http://twitter.com/davegandy"
-  },
+  "homepage": "http://fontawesome.io/",
   "bugs": {
     "url": "http://github.com/FortAwesome/Font-Awesome/issues"
+  },
+  "author": {
+    "name": "Dave Gandy",
+    "email": "dave@fontawesome.io",
+    "url": "http://twitter.com/davegandy"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FortAwesome/Font-Awesome.git"
   },
   "contributors": [
     {
@@ -70,42 +42,36 @@
       "url": "http://twitter.com/gtagliala"
     }
   ],
+  "license": "(OFL-1.1 AND MIT)",
   "dependencies": {},
-  "description": "The iconic font and CSS framework",
-  "devDependencies": {},
-  "directories": {},
-  "dist": {
-    "shasum": "8fa8cf0411a1a31afd07b06d2902bb9fc815a133",
-    "tarball": "https://registry.npmjs.org/font-awesome/-/font-awesome-4.7.0.tgz"
-  },
   "engines": {
     "node": ">=0.10.3"
   },
   "gitHead": "a8386aae19e200ddb0f6845b5feeee5eb7013687",
-  "homepage": "http://fontawesome.io/",
-  "keywords": [
-    "font",
-    "awesome",
-    "fontawesome",
-    "icon",
-    "font",
-    "bootstrap"
-  ],
-  "license": "(OFL-1.1 AND MIT)",
+  "_id": "font-awesome@4.7.0",
+  "scripts": {},
+  "_shasum": "8fa8cf0411a1a31afd07b06d2902bb9fc815a133",
+  "_from": "font-awesome@4.7.0",
+  "_npmVersion": "3.3.12",
+  "_nodeVersion": "5.5.0",
+  "_npmUser": {
+    "name": "juliankrispel",
+    "email": "julian@goodafternoon.co"
+  },
+  "dist": {
+    "shasum": "8fa8cf0411a1a31afd07b06d2902bb9fc815a133",
+    "tarball": "https://registry.npmjs.org/font-awesome/-/font-awesome-4.7.0.tgz"
+  },
   "maintainers": [
     {
-      "email": "julian@goodafternoon.co",
-      "name": "juliankrispel"
+      "name": "juliankrispel",
+      "email": "julian@goodafternoon.co"
     }
   ],
-  "name": "font-awesome",
-  "optionalDependencies": {},
-  "readme": "ERROR: No README data found!",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/FortAwesome/Font-Awesome.git"
+  "_npmOperationalInternal": {
+    "host": "packages-18-east.internal.npmjs.com",
+    "tmp": "tmp/font-awesome-4.7.0.tgz_1477344817307_0.6990068354643881"
   },
-  "scripts": {},
-  "style": "css/font-awesome.css",
-  "version": "4.7.0"
+  "directories": {},
+  "_resolved": "https://registry.npmjs.org/font-awesome/-/font-awesome-4.7.0.tgz"
 }
