--- a/font-awesome/package.json
+++ b/font-awesome/package.json
@@ -1,38 +1,57 @@
 {
-  "_from": "@fortawesome/fontawesome-free@^5.8.1",
-  "_id": "@fortawesome/fontawesome-free@5.8.1",
-  "_inBundle": false,
-  "_integrity": "sha512-GJtx6e55qLEOy2gPOsok2lohjpdWNGrYGtQx0FFT/++K4SYx+Z8LlPHdQBaFzKEwH5IbBB4fNgb//uyZjgYXoA==",
-  "_location": "/@fortawesome/fontawesome-free",
+  "_args": [
+    [
+      {
+        "name": "font-awesome",
+        "raw": "font-awesome@^4.6.3",
+        "rawSpec": "^4.6.3",
+        "scope": null,
+        "spec": ">=4.6.3 <5.0.0",
+        "type": "range"
+      },
+      "/Users/paulaustin/repos/teakblocks"
+    ]
+  ],
+  "_from": "font-awesome@>=4.6.3 <5.0.0",
+  "_id": "font-awesome@4.7.0",
+  "_inCache": true,
+  "_installable": true,
+  "_location": "/font-awesome",
+  "_nodeVersion": "5.5.0",
+  "_npmOperationalInternal": {
+    "host": "packages-18-east.internal.npmjs.com",
+    "tmp": "tmp/font-awesome-4.7.0.tgz_1477344817307_0.6990068354643881"
+  },
+  "_npmUser": {
+    "email": "julian@goodafternoon.co",
+    "name": "juliankrispel"
+  },
+  "_npmVersion": "3.3.12",
   "_phantomChildren": {},
   "_requested": {
-    "type": "range",
-    "registry": true,
-    "raw": "@fortawesome/fontawesome-free@^5.8.1",
-    "name": "@fortawesome/fontawesome-free",
-    "escapedName": "@fortawesome%2ffontawesome-free",
-    "scope": "@fortawesome",
-    "rawSpec": "^5.8.1",
-    "saveSpec": null,
-    "fetchSpec": "^5.8.1"
+    "name": "font-awesome",
+    "raw": "font-awesome@^4.6.3",
+    "rawSpec": "^4.6.3",
+    "scope": null,
+    "spec": ">=4.6.3 <5.0.0",
+    "type": "range"
   },
   "_requiredBy": [
-    "#DEV:/",
-    "#USER"
+    "/"
   ],
-  "_resolved": "https://registry.npmjs.org/@fortawesome/fontawesome-free/-/fontawesome-free-5.8.1.tgz",
-  "_shasum": "cbafbfe8894c4e3e3c3a9da6774e249ac1f2da8b",
-  "_spec": "@fortawesome/fontawesome-free@^5.8.1",
+  "_resolved": "https://registry.npmjs.org/font-awesome/-/font-awesome-4.7.0.tgz",
+  "_shasum": "8fa8cf0411a1a31afd07b06d2902bb9fc815a133",
+  "_shrinkwrap": null,
+  "_spec": "font-awesome@^4.6.3",
   "_where": "/Users/paulaustin/repos/teakblocks",
   "author": {
+    "email": "dave@fontawesome.io",
     "name": "Dave Gandy",
-    "email": "dave@fontawesome.com",
     "url": "http://twitter.com/davegandy"
   },
   "bugs": {
     "url": "http://github.com/FortAwesome/Font-Awesome/issues"
   },
-  "bundleDependencies": false,
   "contributors": [
     {
       "name": "Brian Talbot",
@@ -49,34 +68,44 @@
     {
       "name": "Geremia Taglialatela",
       "url": "http://twitter.com/gtagliala"
-    },
-    {
-      "name": "Mike Wilkerson",
-      "url": "http://twitter.com/mw77"
     }
   ],
   "dependencies": {},
-  "deprecated": false,
-  "description": "The iconic font, CSS, and SVG framework",
-  "engines": {
-    "node": ">=6"
+  "description": "The iconic font and CSS framework",
+  "devDependencies": {},
+  "directories": {},
+  "dist": {
+    "shasum": "8fa8cf0411a1a31afd07b06d2902bb9fc815a133",
+    "tarball": "https://registry.npmjs.org/font-awesome/-/font-awesome-4.7.0.tgz"
   },
-  "homepage": "https://fontawesome.com",
+  "engines": {
+    "node": ">=0.10.3"
+  },
+  "gitHead": "a8386aae19e200ddb0f6845b5feeee5eb7013687",
+  "homepage": "http://fontawesome.io/",
   "keywords": [
     "font",
     "awesome",
     "fontawesome",
     "icon",
-    "svg",
+    "font",
     "bootstrap"
   ],
-  "license": "(CC-BY-4.0 AND OFL-1.1 AND MIT)",
-  "main": "js/fontawesome.js",
-  "name": "@fortawesome/fontawesome-free",
+  "license": "(OFL-1.1 AND MIT)",
+  "maintainers": [
+    {
+      "email": "julian@goodafternoon.co",
+      "name": "juliankrispel"
+    }
+  ],
+  "name": "font-awesome",
+  "optionalDependencies": {},
+  "readme": "ERROR: No README data found!",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/FortAwesome/Font-Awesome.git"
   },
-  "style": "css/fontawesome.css",
-  "version": "5.8.1"
+  "scripts": {},
+  "style": "css/font-awesome.css",
+  "version": "4.7.0"
 }
